--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -4,7 +4,6 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href={% static "css/app/main.css" %}>
-    <link rel="stylesheet" href={% static "css/app/home.css" %}>
     <!-- Teko font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
@@ -18,6 +17,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap" rel="stylesheet">
     <title>Opti Plus</title>
+    {% block head_block %}
+    {% endblock %}
   </head>
   <body>
     <div class="topbar">
@@ -28,8 +29,8 @@
     <div class="navbar">
       <a href="{% url 'index' %}"><img src="{% static "img/app/home.svg" %}" alt="Home logo" id="homelogo"></a>
       <a href="{% url 'app:about' %}"><p id="onas" class="underline">O nas</p></a>
-      <a href=""><p id="uslugi" class="underline">Usługi</p></a>
-      <a href=""><p id="cennik" class="underline">Cennik</p></a>
+      <a href="{% url 'app:serviceinfo' %}"><p id="uslugi" class="underline">Usługi</p></a>
+      <a href="{% url 'app:pricelist' %}"><p id="cennik" class="underline">Cennik</p></a>
       <a href=""><p id="galeria" class="underline">Galeria</p></a>
       <a href=""><p id="kontakt" class="underline">Kontakt</p></a>
       <a href=""><img src="{% static "img/app/account.svg" %}" alt="Account logo" id="accountlogo"></a>
@@ -43,20 +44,20 @@
       <ul class="botbarnav">
         <li>O nas
           <ul>
-            <li><a href="">Poznaj nas</a></li>
+            <li><a href="{% url 'app:about' %}">Poznaj nas</a></li>
           </ul>
         </li>
         <li>Usługi
           <ul>
-            <li><a href="">Diagnostyka</a></li>
-            <li><a href="">Jaskra</a></li>
-            <li><a href="">Zaćma</a></li>
-            <li><a href="">Leczenie</a></li>
+            <li><a href="{% url 'app:service1' %}">Diagnostyka</a></li>
+            <li><a href="{% url 'app:service3' %}">Jaskra</a></li>
+            <li><a href="{% url 'app:service4' %}">Zaćma</a></li>
+            <li><a href="{% url 'app:service2' %}">Leczenie</a></li>
           </ul>
         </li>
         <li>Cennik
           <ul>
-            <li><a href="">Aktualny cennik</a></li>
+            <li><a href="{% url 'app:pricelist' %}">Aktualny cennik</a></li>
           </ul>
         </li>
         <li>Kontakt
@@ -82,5 +83,7 @@
     let test = document.documentElement.clientHeight;
     console.log(test);
     document.querySelector(".botbar").style.top = container_height+top_bar+nav_bar+"px";
+    {% block script_block %}
+    {% endblock %}
   </script>
 </html>
