--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -31,10 +31,14 @@
       <a href="{% url 'app:about' %}"><p id="onas" class="underline">O nas</p></a>
       <a href="{% url 'app:serviceinfo' %}"><p id="uslugi" class="underline">Usługi</p></a>
       <a href="{% url 'app:pricelist' %}"><p id="cennik" class="underline">Cennik</p></a>
-      <a href=""><p id="galeria" class="underline">Galeria</p></a>
-      <a href=""><p id="kontakt" class="underline">Kontakt</p></a>
-      <a href=""><img src="{% static "img/app/account.svg" %}" alt="Account logo" id="accountlogo"></a>
-      <a href=""><img src="{% static "img/app/logout.svg" %}" alt="Account logo" id="logoutlogo"></a>
+      <a href="{% url 'app:galery' %}"><p id="galeria" class="underline">Galeria</p></a>
+      <a href="{% url 'app:contact' %}"><p id="kontakt" class="underline">Kontakt</p></a>
+      {% if user.is_authenticated %}
+      <a href="#"><img src="{% static "img/app/account.svg" %}" alt="Account logo" id="accountlogo"></a>
+      <a href="{% url 'user_logout' %}"><img src="{% static "img/app/logout.svg" %}" alt="Logout logo" id="logoutlogo"></a>
+      {% else %}
+      <a href="{% url 'app:user_login' %}"><img src="{% static "img/app/login.svg" %}" alt="Login logo" id="loginlogo"></a>
+      {% endif %}
     </div>
 
     {% block body_block %}
@@ -62,8 +66,8 @@
         </li>
         <li>Kontakt
           <ul>
-            <li><a href="">Dane kontaktowe</a></li>
-            <li><a href="">Znajdź nas na mapie</a></li>
+            <li><a href="{% url 'app:contact' %}">Dane kontaktowe</a></li>
+            <li><a href="{% url 'app:contact' %}">Znajdź nas na mapie</a></li>
           </ul>
         </li>
         <li>Konto
