--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -65,7 +65,7 @@
         </p>
       </div>
       <div class="extrapanel">
-        <div class="extragalery">
+        <div class="extragalery" onclick="location.href='{% url 'app:galery' %}'">
           <img src="{% static "img/app/galery.jpg" %}" alt="galery">
           <h1>Nasza praca</h1>
         </div>
