Panel użytownika - wizualizacja

--- a/static/css/app/login.css
+++ b/static/css/app/login.css
@@ -67,7 +67,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
-  color: black;
+  color: #54596E;
 }
 .formpanel input[type=text]{
   margin-top: 70px;
