--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -69,7 +69,7 @@
           <img src="{% static "img/app/galery.jpg" %}" alt="galery">
           <h1>Nasza praca</h1>
         </div>
-        <div class="extraregister">
+        <div class="extraregister" onclick="location.href='{% url 'app:register' %}'">
           <img src="{% static "img/app/createacc.jpg" %}" alt="create account">
           <h1>Dołącz do nas</h1>
         </div>
