--- a/static/css/app/register.css
+++ b/static/css/app/register.css
@@ -53,6 +53,16 @@
   width: 600px;
   height: 500px;
 }
+.formpanel p{
+  margin-top: 20px;
+  text-align: center;
+
+  font-family: 'Cairo', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  color: white;
+}
 .formpanel input{
   height: 40px;
   width: 400px;
@@ -67,12 +77,12 @@
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
-  color: black;
+  color: #54596E;
 }
 .formpanel input[type=submit]{
   height: 50px;
   width: 200px;
-  margin-top: 50px;
+  margin-top: -20px;
   margin-left: 200px;
   background-color: #0077B6;
   border-radius: 20px;
@@ -93,11 +103,13 @@
   margin-left: 100px;
   border: 0px;
   outline: none;
+  text-indent: 160px;
 
   font-family: 'Cairo', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
+  color: #54596E;
 }
 .formpanel p{
   margin-top: 30px;
