Zmiana danych użytkownika/hasła

--- a/static/css/app/change_password.css
+++ b/static/css/app/change_password.css
@@ -98,3 +98,24 @@
   margin-top: 40px;
   margin-left: 0;
 }
+
+.errors{
+  position: absolute;
+  left: 450px;
+  top: 0;
+  width: 76.35%;
+  display: none;
+
+  text-align: center;
+  background-color: #FF7276;
+
+  font-family: 'Cairo', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 10px;
+  text-align: center;
+  color: #FFFFFF;
+}
+.errors > h1{
+  display: none;
+}
