--- a/templates/app/change_password.html
+++ b/templates/app/change_password.html
@@ -3,6 +3,7 @@
   {% block head_block %}
   <link rel="stylesheet" href="{% static "css/app/profile.css" %}">
   <link rel="stylesheet" href="{% static "css/app/change_password.css" %}">
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
   {% endblock %}
   {% block profile_block %}
   <div class="person_info">
@@ -17,11 +18,36 @@
     <div class="person_info_labels">
       <form method="post">
         {% csrf_token %}
-        <input type="password" name="actuall" value="">
+        <input type="password" name="current" value="">
         <input type="password" name="new" value="">
-        <input type="password" name="repeat" value="{{email_value}}">
+        <input type="password" name="repeat" value="">
         <input type="submit" name="save" value="Zapisz">
       </form>
     </div>
   </div>
+  <div class="errors">
+    <h1 class="error_message">
+      {% if error %}
+        {{ error }}
+      {% endif %}
+    </h1>
+  </div>
+  {% endblock %}
+  {% block script_block %}
+    let error = {{ error_type }}
+
+    if(error == 1 || error == 2){
+      $(".errors").css("display","block");
+      $(".errors > h1").css("display","block");
+    }
+    else{
+      $(".errors").css("display","none");
+      $(".errors > h1").css("display","none");
+    }
+    if( error == 1 ){
+      $(".errors").css("background-color","#FF7276");
+    }
+    else if( error == 2 ){
+      $(".errors").css("background-color","#009A44");
+    }
   {% endblock %}
