--- a/templates/app/profile.html
+++ b/templates/app/profile.html
@@ -11,7 +11,7 @@
         </div>
         <button onclick="window.location.href='{% url 'app:personal_data' %}'">Dane osobowe</button>
         <button onclick="window.location.href='{% url 'app:change_password' %}'">Zmiana hasła</button>
-        <button>Zaplanuj wizytę</button>
+        <button onclick="window.location.href='{% url 'app:calendar' %}'">Zaplanuj wizytę</button>
         <button onclick="window.location.href='{% url 'app:show_events' %}'">Twoje wizyty</button>
         <h1 id="companyname">OPTI+</h1>
       </div>
