Poprawienie drobnych błędów w kodzie, dodane powiadomienie email

--- a/templates/app/calendar.html
+++ b/templates/app/calendar.html
@@ -61,7 +61,7 @@
           $(this).css("color","red");
         }
         else{
-          if( ($(this).text() < actuall_day) && (actuall_month == date.getMonth()+1) ){
+          if( ($(this).text() <= actuall_day) && (actuall_month == date.getMonth()+1) ){
             $(this).css("color","red");
           }
           else{
