--- a/templates/app/show_events.html
+++ b/templates/app/show_events.html
@@ -14,7 +14,7 @@
         <td>Godzina</td>
         <td>Odwołaj</td>
       </tr>
-      <!-- Create Django codition here -->
+      <!-- Django codition here -->
       {% if events %}
         {% for e in events %}
         <tr class="events">
